# volleyball-ml-models

./: .gitignore  LICENSE  ORGANIZATION.md  README.md  SETUP.md  __init__.py  enums.py  example_usage.py  ml_manager.py  pyproject.toml  sample_config.yaml  test_ml_manager.py  train.py
conf/: sample_weights_config.yaml  video_mae_training.yaml  videomae_training_example.yaml  yolo_training.yaml  yolo_training_example.yaml
core/: __init__.py  data_structures.py  tracking_module.py
examples/: training_examples.py
models/: ActionDetectorModule.py  BallDetectorModule.py  CourtSegmentationModule.py  GameStatusClassifierModule.py  PlayerDetectorModule.py  YoloModule.py  __init__.py  action_detector.py  ball_detector.py  court_segmentation.py  data_structures.py  game_status_classifier.py  player_module.py  yolo_module.py
settings/: __init__.py  videomae_config.py  weights_config.py  yolo_config.py
training/: __init__.py  trainer.py  utils.py
utils/: README.md  __init__.py  downloader.py  logger.py
visualization/: __init__.py  visualization_module.py
